# computer-graphics

./: README.md  pyproject.toml
Stepa123de/todo/: Bitmap.py  __main__.py
filters-openCV/: pyproject.toml
filters-openCV/filters_opencv/: __main__.py  image.py
filters-openCV/filters_opencv/filters/: __init__.py  arithmetic_mean.py  changing_histogram.py  inversion.py  mirror_image.py  scale.py
filters-openCV/filters_opencv/filters/global_filters/median_filters/: __init__.py
filters-openCV/filters_opencv/filters/local_filters/: arithmetic_mean.py
filters-openCV/filters_opencv/filters/local_filters/arithmetic_mean/: blur.py  blur_by_andrey.py  blur_optimized.py  blur_optimized_by_andrey.py
filters-openCV/filters_opencv/filters/point_filters/: __init__.py
filters-openCV/filters_opencv/filters/spot_filters/: inversion.py  scale.py
image_editor/: README.md
image_editor/filters_opencv/: __main__.py  cmd_input.py  command.py  image.py
image_editor/filters_opencv/filters/: __init__.py  filter.py  filter_list.py
image_editor/filters_opencv/filters/global_filters/: __init__.py  autolevels.py  correction_with_reference_color.py  embossing.py  global_filters_list.py  linear_stretch.py  linear_stretching.py  perfect_reflector.py  rainbow_border.py
image_editor/filters_opencv/filters/local_filters/: __init__.py  black_hat.py  closing.py  dilation.py  embossing.py  erosion.py  gaussian_blur.py  glowing_edges.py  grad.py  increase_sharpness.py  local_filters_list.py  maximum.py  median.py  methods.py  motion_blur.py  opening.py  pruitt.py  sharra.py  sobel.py  (+1 more)
(+66 files in other folders)
