[tool.poetry]
name = "imageconv"
version = "0.1.0"
description = ""
authors = ["Luigi_Capello <Stepa.kashin.2018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.4.0"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
