[tool.poetry]
name = "filters-opencv"
version = "0.1.0"
description = ""
authors = ["Namxobick <andreyyurin@icloud.com>"]
readme = "README.md"
packages = [{include = "filters_opencv"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.68"
loguru = "^0.6.0"
wemake-python-styleguide = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
